feat: refactor persistance and timeouts